--- a/_posts/2025-05-24-OLS.md
+++ b/_posts/2025-05-24-OLS.md
@@ -271,7 +271,7 @@ Where $\bar{\mathbf{x}}$ is the average observation and $\Sigma=(\tilde{X}^T \ti
 $$
 D_{x}=\sqrt{ \frac{(x-\bar{x})^2}{\sigma_{x}^2} }=\frac{{x-\bar{x}}}{\sigma_{x}}
 $$
-{% raw %}
+{% endraw %}
 ($\sigma_{x}^2$: variance for $x_{i}$ values)
 * **Not a convex combination.** The $\alpha_{i}$ values sum to 1 but they're *not* all in $[0, 1]$, since some of them are negative. This is why OLS is not a 'proper' kernel regression, and we can't call it, say, the 'Mahalanobis kernel'. The geometric distortion caused by $(X^TX)^{-1}$ also means that the $\alpha_{i}$ 'scores' produced by OLS can't be as easily interpreted as 'closer=larger $\alpha_{i}$'.
 
