--- a/_posts/2025-05-25-OLS-blog.md
+++ b/_posts/2025-05-25-OLS-blog.md
@@ -3,4 +3,7 @@ title: "The Many Faces of Linear Regression
 date: 2025-05-25
 layout: single
 redirect_to: https://my.flowershow.app/@AmirV97/Blog#regularized-least-squares
+tags:
+ - math
+ - linear algebra
 ---
