--- a/_posts/2025-05-25-OLS-blog.md
+++ b/_posts/2025-05-25-OLS-blog.md
@@ -1,9 +1,10 @@
 ---
-title: "The Many Faces of Linear Regression
+title: "The Many Faces of Linear Regression"
 date: 2025-05-25
+permalink: /posts/2025/05/OLS-blog/
 layout: single
 redirect_to: https://my.flowershow.app/@AmirV97/Blog#regularized-least-squares
 tags:
  - math
- - linear algebra
+ - "linear algebra"
 ---
